# orchestrator

./: .gitignore  README.md  pyproject.toml
config/: personal.json  work.json
orchestrator/: __init__.py  cli.py  config.py  judge.py  models.py  patrol.py  planner.py  portfolio.py  refinery.py  state.py  worker.py
orchestrator/prompts/: __init__.py  judge_system.md  planner_system.md  refinery_system.md  worker_code.md  worker_fix.md  worker_review.md  worker_test.md
tests/: test_config.py  test_models.py  test_planner.py  test_state.py  test_worker.py
